--- a/etcd/templates/conf.yml.j2
+++ b/etcd/templates/conf.yml.j2
@@ -93,16 +93,16 @@ proxy-read-timeout: 0
 
 client-transport-security:
   # Path to the client server TLS cert file.
-  cert-file:
+  cert-file: /etc/kubernetes/pki/etcd/server.crt
 
   # Path to the client server TLS key file.
-  key-file:
+  key-file: /etc/kubernetes/pki/etcd/server.key
 
   # Enable client cert authentication.
   client-cert-auth: false
 
   # Path to the client server TLS trusted CA cert file.
-  trusted-ca-file:
+  trusted-ca-file: /etc/kubernetes/pki/etcd/ca.crt
 
   # Client TLS using generated certificates
   auto-tls: false
