wip(k8s): add initial kube-apiserver spin-up

--- a/kubeconfig/templates/kubeconfig.yml.j2
+++ b/kubeconfig/templates/kubeconfig.yml.j2
@@ -4,6 +4,11 @@ clusters:
       certificate-authority: {{ ca_cert_path }}
       server: https://{{ apiserver_ip }}:{{ apiserver_port | default(6443) }}
     name: {{ kube_context }}
+contexts:
+  - context:
+      cluster: {{ kube_context }}
+      user: {{ kube_context }}
+    name: {{ kube_context }}
 current-context: {{ kube_context }}
 kind: Config
 preferences: {}
