feat: add kube-controller-manager to controlplane

--- a/k8s/templates/kube-apiserver.service.j2
+++ b/k8s/templates/kube-apiserver.service.j2
@@ -11,7 +11,7 @@ ExecStart=/usr/local/bin/kube-apiserver \
   --audit-log-maxsize=100 \
   --audit-log-path=/var/log/audit.log \
   --authorization-mode=Node,RBAC \
-  --bind-address=0.0.0.0 \
+  --bind-address={{ bind_address }} \
   --client-ca-file=/etc/kubernetes/pki/ca.crt \
   --enable-admission-plugins=NamespaceLifecycle,NodeRestriction,LimitRanger,ServiceAccount,DefaultStorageClass,ResourceQuota \
   --etcd-cafile=/etc/kubernetes/pki/etcd/ca.crt \
@@ -21,18 +21,18 @@ ExecStart=/usr/local/bin/kube-apiserver \
   --event-ttl=1h \
   --encryption-provider-config=/etc/kubernetes/encryption-config.yml \
   --kubelet-certificate-authority=/etc/kubernetes/pki/ca.crt \
-  --kubelet-client-certificate=/etc/kubernetes/pki/etcd/kube-apiserver.crt \
-  --kubelet-client-key=/etc/kubernetes/pki/etcd/kube-apiserver.key \
+  --kubelet-client-certificate=/etc/kubernetes/pki/kube-apiserver.crt \
+  --kubelet-client-key=/etc/kubernetes/pki/kube-apiserver.key \
   --runtime-config='api/all=true' \
   --service-account-key-file=/etc/kubernetes/pki/serviceaccount.key \
   --service-account-signing-key-file=/etc/kubernetes/pki/serviceaccount.key \
   --service-account-issuer=https://{{ kubernetes_public_ip }}:6443 \
   --service-cluster-ip-range=10.0.0.0/16,fd00:10:96::/112 \
   --service-node-port-range=30000-32767 \
-  --tls-cert-file=/etc/kubernetes/pki/etcd/kube-apiserver.crt \
-  --tls-private-key-file=/etc/kubernetes/pki/etcd/kube-apiserver.key \
-  --proxy-client-cert-file=/etc/kubernetes/pki/etcd/kube-apiserver.crt \
-  --proxy-client-key-file=/etc/kubernetes/pki/etcd/kube-apiserver.key \
+  --tls-cert-file=/etc/kubernetes/pki/kube-apiserver.crt \
+  --tls-private-key-file=/etc/kubernetes/pki/kube-apiserver.key \
+  --proxy-client-cert-file=/etc/kubernetes/pki/kube-apiserver.crt \
+  --proxy-client-key-file=/etc/kubernetes/pki/kube-apiserver.key \
   --peer-advertise-ip={{ apiserver_ip }} \
   --peer-ca-file=/etc/kubernetes/pki/ca.crt \
   --feature-gates=UnknownVersionInteroperabilityProxy=true,StorageVersionAPI=true \
