--- a/kubeconfig/templates/kubeconfig.yml.j2
+++ b/kubeconfig/templates/kubeconfig.yml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 clusters:
   - cluster:
       certificate-authority: {{ ca_cert_path }}
-      server: https://{{ apiserver_ip }}:{{ apiserver_port | default(6443) }}
+      server: https://localhost:{{ load_balancer_port }}
     name: {{ kube_context }}
 contexts:
   - context:
