chore: revisit k8s role

--- a/k8s/templates/kube-scheduler.service.j2
+++ b/k8s/templates/kube-scheduler.service.j2
@@ -5,6 +5,8 @@ Documentation=https://github.com/kubernetes/kubernetes
 [Service]
 ExecStart=/usr/local/bin/kube-scheduler \
   --config=/etc/kubernetes/config/kube-scheduler.yml \
+  --leader-elect \
+  --leader-elect-lease-duration=15s \
   --v=2
 Restart=on-failure
 RestartSec=5
