--- a/haproxy/templates/haproxy.cfg.j2
+++ b/haproxy/templates/haproxy.cfg.j2
@@ -57,5 +57,5 @@ backend kube_apiserver
   option tcp-check
   balance leastconn
 {% for apiserver_ip in apiserver_ips %}
-  server kube-apiserver-{{ loop.index }} {{ apiserver_ip }}:{{ apiserver_port }} check
+  server kube-apiserver-{{ loop.index }} {{ apiserver_ip }}:{{ apiserver_port }} check observe layer4  error-limit 10  on-error mark-down
 {% endfor %}
