--- a/haproxy/templates/haproxy.cfg.j2
+++ b/haproxy/templates/haproxy.cfg.j2
@@ -55,7 +55,7 @@ frontend kube_apiserver
 backend kube_apiserver
   mode tcp
   option tcp-check
-  balance leastconn
+  balance roundrobin
 {% for apiserver_ip in apiserver_ips %}
   server kube-apiserver-{{ loop.index }} {{ apiserver_ip }}:{{ apiserver_port }} check observe layer4  error-limit 10  on-error mark-down
 {% endfor %}
