--- a/worker/templates/kubelet-config.yml.j2
+++ b/worker/templates/kubelet-config.yml.j2
@@ -12,7 +12,7 @@ authorization:
 clusterDomain: "{{ cluster_domain }}"
 clusterDNS:
   - "{{ cluster_dns }}"
-podCIDR: "{{ pod_subnet_cidr_v4 }}"
+# podCIDR: "{{ pod_subnet_cidr_v4 }}"
 resolvConf: "/run/systemd/resolve/resolv.conf"
 runtimeRequestTimeout: "15m"
 tlsCertFile: /etc/kubernetes/pki/kubelet.crt
