--- a/etcd/templates/systemd.service.j2
+++ b/etcd/templates/systemd.service.j2
@@ -5,7 +5,7 @@ Documentation=https://github.com/etcd-io/etcd
 [Service]
 Type=notify
 ExecStart=/usr/local/bin/etcd \
-  --name {{ etcd_peer_name }} \
+  --name={{ etcd_peer_name }} \
   --cert-file=/etc/kubernetes/pki/etcd/server.crt \
   --key-file=/etc/kubernetes/pki/etcd/server.key \
   --peer-cert-file=/etc/kubernetes/pki/etcd/server.crt \
@@ -22,9 +22,10 @@ ExecStart=/usr/local/bin/etcd \
   --initial-cluster={{ etcd_initial_cluster }} \
   --initial-cluster-state={{ etcd_initial_cluster_state }} \
   --data-dir=/var/lib/etcd
-
-Restart=on-failure
+LimitNOFILE=40000
+Restart=always
 RestartSec=5
+TimeoutStartSec=0
 
 [Install]
 WantedBy=multi-user.target
