--- a/tls/templates/apiserver-alt-names.yml.j2
+++ b/tls/templates/apiserver-alt-names.yml.j2
@@ -2,7 +2,7 @@
 {% for apiserver_ip in apiserver_ips %}
 - IP:{{ apiserver_ip }}
 {% endfor %}
-- IP:192.168.56.100
+- IP:{{ external_hostname }}
 - DNS:localhost
 - DNS:{{ inventory_hostname }}
 - DNS:kubernetes
