--- a/haproxy/templates/haproxy.cfg.j2
+++ b/haproxy/templates/haproxy.cfg.j2
@@ -1,61 +1,62 @@
 global
-    log /dev/log format raw local0 info
-    log-send-hostname
-    chroot /var/lib/haproxy
-    stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
-    stats timeout 30s
-    user haproxy
-    group haproxy
-    daemon
+  log stdout format raw local0 info
+  log-send-hostname
+  chroot /var/lib/haproxy
+  stats socket /run/haproxy/admin.sock mode 660 level admin expose-fd listeners
+  stats timeout 30s
+  user haproxy
+  group haproxy
+  daemon
 
-    # Default SSL material locations
-    ca-base /etc/ssl/certs
-    crt-base /etc/ssl/private
+  # Default SSL material locations
+  ca-base /etc/ssl/certs
+  crt-base /etc/ssl/private
 
-    # Default ciphers to use on SSL-enabled listening sockets.
-    # For more information, see ciphers(1SSL). This list is from:
-    #  https://hynek.me/articles/hardening-your-web-servers-ssl-ciphers/
-    # An alternative list with additional directives can be obtained from
-    #  https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=haproxy
-    ssl-default-bind-ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
-    ssl-default-bind-ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256
-    # ssl-default-bind-options no-sslv3
-    ssl-default-bind-options ssl-min-ver TLSv1.2 no-tls-tickets
-    tune.ssl.default-dh-param 2048
+  # Default ciphers to use on SSL-enabled listening sockets.
+  # For more information, see ciphers(1SSL). This list is from:
+  #  https://hynek.me/articles/hardening-your-web-servers-ssl-ciphers/
+  # An alternative list with additional directives can be obtained from
+  #  https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=haproxy
+  ssl-default-bind-ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
+  ssl-default-bind-ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256
+  # ssl-default-bind-options no-sslv3
+  ssl-default-bind-options ssl-min-ver TLSv1.2 no-tls-tickets
+  tune.ssl.default-dh-param 2048
 
 defaults
-    log     global
-    mode    http
-    option  tcplog
-    option  dontlognull
-    timeout connect 5000
-    timeout client  50000
-    timeout server  50000
-    errorfile 400 /etc/haproxy/errors/400.http
-    errorfile 403 /etc/haproxy/errors/403.http
-    errorfile 408 /etc/haproxy/errors/408.http
-    errorfile 500 /etc/haproxy/errors/500.http
-    errorfile 502 /etc/haproxy/errors/502.http
-    errorfile 503 /etc/haproxy/errors/503.http
-    errorfile 504 /etc/haproxy/errors/504.http
+  log     global
+  mode    http
+  option  tcplog
+  option  dontlognull
+  timeout connect 5000
+  timeout client  50000
+  timeout server  50000
+  errorfile 400 /etc/haproxy/errors/400.http
+  errorfile 403 /etc/haproxy/errors/403.http
+  errorfile 408 /etc/haproxy/errors/408.http
+  errorfile 500 /etc/haproxy/errors/500.http
+  errorfile 502 /etc/haproxy/errors/502.http
+  errorfile 503 /etc/haproxy/errors/503.http
+  errorfile 504 /etc/haproxy/errors/504.http
 
 frontend stats
-    bind :8404
-    http-request use-service prometheus-exporter if { path /metrics }
-    stats enable
-    stats uri /stats
-    stats refresh 10s
+  bind :8404
+  http-request use-service prometheus-exporter if { path /metrics }
+  stats enable
+  stats uri /stats
+  stats refresh 10s
 
 frontend kube_apiserver
   mode tcp
+
   bind :{{ haproxy_port }}
   default_backend kube_apiserver
 
 backend kube_apiserver
   mode tcp
   option httpchk GET /healthz
-  http-check connect ssl
+  http-check connect ssl alpn h2,http/1.1 ssl
   balance roundrobin
 {% for apiserver_ip in apiserver_ips %}
-  server kube-apiserver-{{ loop.index }} {{ apiserver_ip }}:{{ apiserver_port }} check inter 3s fall 1 rise 1 verify none
+  server kube-apiserver-{{ loop.index }} {{ apiserver_ip }}:{{ apiserver_port }} check inter 3s fall 1 rise 1 verify required ca-file /etc/ssl/certs/kubernetes-the-hard-way.pem
 {% endfor %}
