--- a/kubeconfig/templates/kubeconfig.yml.j2
+++ b/kubeconfig/templates/kubeconfig.yml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 clusters:
   - cluster:
       certificate-authority: {{ ca_cert_path }}
-      server: https://{{ kube_apiserver_address }}:{{ load_balancer_port }}
+      server: https://{{ kube_apiserver_address }}:{{ kube_apiserver_port }}
     name: {{ kube_context }}
 contexts:
   - context:
