--- a/etcd/templates/systemd.service.j2
+++ b/etcd/templates/systemd.service.j2
@@ -5,23 +5,26 @@ Documentation=https://github.com/etcd-io/etcd
 [Service]
 Type=notify
 ExecStart=/usr/local/bin/etcd \
-  --name={{ etcd_peer_name }} \
+  --advertise-client-urls=https://{{ host_ip }}:2379 \
   --cert-file=/etc/kubernetes/pki/etcd/server.crt \
-  --key-file=/etc/kubernetes/pki/etcd/server.key \
-  --peer-cert-file=/etc/kubernetes/pki/etcd/server.crt \
-  --peer-key-file=/etc/kubernetes/pki/etcd/server.key \
-  --trusted-ca-file=/etc/kubernetes/pki/etcd/ca.crt \
-  --peer-trusted-ca-file=/etc/kubernetes/pki/etcd/ca.crt \
-  --peer-client-cert-auth \
   --client-cert-auth \
-  --initial-advertise-peer-urls=https://{{ etcd_advertise_ip }}:2380 \
-  --listen-peer-urls=https://{{ etcd_advertise_ip }}:2380 \
-  --listen-client-urls=https://{{ etcd_advertise_ip }}:2379,https://localhost:2379 \
-  --advertise-client-urls=https://{{ etcd_advertise_ip }}:2379 \
+  --data-dir=/var/lib/etcd \
+  --initial-advertise-peer-urls=https://{{ host_ip }}:2380 \
+  --initial-cluster-state={{ etcd_initial_cluster_state }} \
   --initial-cluster-token={{ etcd_initial_cluster_token }} \
   --initial-cluster={{ etcd_initial_cluster }} \
-  --initial-cluster-state={{ etcd_initial_cluster_state }} \
-  --data-dir=/var/lib/etcd
+  --key-file=/etc/kubernetes/pki/etcd/server.key \
+  --listen-client-urls=https://{{ bind_address }}:2379,https://localhost:2379 \
+  --listen-peer-urls=https://{{ bind_address }}:2380 \
+  --log-level info \
+  --log-outputs stderr \
+  --logger zap \
+  --name={{ etcd_peer_name }} \
+  --peer-cert-file=/etc/kubernetes/pki/etcd/server.crt \
+  --peer-client-cert-auth \
+  --peer-key-file=/etc/kubernetes/pki/etcd/server.key \
+  --peer-trusted-ca-file=/etc/kubernetes/pki/etcd/ca.crt \
+  --trusted-ca-file=/etc/kubernetes/pki/etcd/ca.crt
 LimitNOFILE=40000
 Restart=always
 RestartSec=5
