pass all the etcd servers to API server

--- a/k8s/templates/kube-apiserver.service.j2
+++ b/k8s/templates/kube-apiserver.service.j2
@@ -17,7 +17,7 @@ ExecStart=/usr/local/bin/kube-apiserver \
   --etcd-cafile=/etc/kubernetes/pki/etcd/ca.crt \
   --etcd-certfile=/etc/kubernetes/pki/etcd/kube-apiserver.crt \
   --etcd-keyfile=/etc/kubernetes/pki/etcd/kube-apiserver.key \
-  --etcd-servers=https://localhost:2379 \
+  --etcd-servers={{ k8s_etcd_servers }} \
   --event-ttl=1h \
   --encryption-provider-config=/etc/kubernetes/encryption-config.yml \
   --kubelet-certificate-authority=/etc/kubernetes/pki/ca.crt \
